--- a/src/commands/deploy.yml
+++ b/src/commands/deploy.yml
@@ -15,9 +15,8 @@ steps:
         - <<parameters.ssh_fingerprint>>
   - run:
       name: Deploy to Raspberry Pi
-      command: |
-        scp -o StrictHostKeyChecking=no ./* <<parameters.ssh_user>>@<<parameters.ssh_host>>:/var/www/html/
-        ssh -o StrictHostKeyChecking=no <<parameters.ssh_user>>@<<parameters.ssh_host>> "sudo systemctl restart nginx"
+      command:
+        include: scripts/deploy-to-pi.sh
   - run:
       name: Logout from Tailscale
       when: always
