fix: remove StrictHostKeyChecking option from SCP and SSH commands

--- a/src/commands/deploy.yml
+++ b/src/commands/deploy.yml
@@ -15,10 +15,10 @@ steps:
         - <<parameters.ssh_fingerprint>>
   - run:
       name: SCP files
-      command: scp -o StrictHostKeyChecking=no ./* <<parameters.ssh_user>>@<<parameters.ssh_host>>:/var/www/html/
+      command: scp ./* <<parameters.ssh_user>>@<<parameters.ssh_host>>:/var/www/html/
   - run:
       name: Restart nginx
-      command: ssh -o StrictHostKeyChecking=no <<parameters.ssh_user>>@<<parameters.ssh_host>> "sudo systemctl restart nginx"
+      command: ssh <<parameters.ssh_user>>@<<parameters.ssh_host>> "sudo systemctl restart nginx"
 
   - run:
       name: Logout from Tailscale
