fix: corriger l'installation de Node.js dans le fichier build.yml

--- a/src/commands/build.yml
+++ b/src/commands/build.yml
@@ -1,6 +1,8 @@
 description: "Build the static website"
 steps:
   - checkout
+  - node/install:
+      node-version: '18.20.3'
   - run:
       name: Build Static Site
       command: |
