fix: supprimer l'installation de Node.js dans le fichier build.yml et ajouter la section orbs dans le fichier @orb.yml

--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -9,6 +9,8 @@ description: >
 display:
   home_url: "https://www.google.com"
   source_url: "https://github.com/UnMars/devops-custom-orb"
+orbs:
+  node: circleci/node@5.0.2
 
 # If your orb requires other orbs, you can import them like this. Otherwise remove the "orbs" stanza.
 # orbs:
