--- a/src/commands/deploy.yml
+++ b/src/commands/deploy.yml
@@ -10,6 +10,9 @@ parameters:
     type: string
     description: "SSH key fingerprint registered in CircleCI"
 steps:
+  - setup-environment:
+      install_node: false
+      install_tailscale: false
   - add_ssh_keys:
       fingerprints:
         - <<parameters.ssh_fingerprint>>
