--- a/src/commands/tailscale.yml
+++ b/src/commands/tailscale.yml
@@ -7,10 +7,13 @@ parameters:
     type: string
     default: "circleci-runner"
 steps:
+  - setup-environment:
+      install_node: false
+      install_tailscale: true
   - run:
-      name: Install Tailscale
+      name: Connect to Tailscale
       command: !include src/commands/scripts/setup-tailscale.sh
-
+      args: [<<parameters.authkey>>, <<parameters.hostname>>]
   - run:
       name: Check Tailscale Status
       command: tailscale status
