--- a/src/commands/build.yml
+++ b/src/commands/build.yml
@@ -1,7 +1,7 @@
 description: "Build the static website"
 steps:
   - checkout
-  - setup-environment:
+  - setup_environment:
       install_node: true
       install_tailscale: false
   - run:
