--- a/src/commands/setup_environment.yml
+++ b/src/commands/setup_environment.yml
@@ -12,16 +12,8 @@ steps:
   - run:
       name: Install Node.js
       when: <<parameters.install_node>>
-      command: |
-        echo "Installing Node.js..."
-        curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
-        sudo apt-get install -y nodejs
-        node --version
-        npm --version
+      command: !include src/commands/scripts/install_nodejs.sh
   - run:
       name: Install Tailscale
       when: <<parameters.install_tailscale>>
-      command: |
-        echo "Installing Tailscale..."
-        curl -fsSL https://tailscale.com/install.sh | sh
-        tailscale version
+      command: !include src/commands/scripts/install_tailscale.sh
