Fix Tailscale service startup

--- a/src/jobs/deploy.yml
+++ b/src/jobs/deploy.yml
@@ -30,8 +30,7 @@ steps:
   - run:
       command: |
         echo "Starting Tailscale service..."
-        sudo systemctl start tailscaled
-        sudo systemctl enable tailscaled
+        sleep 5
         echo "Setting up Tailscale with hostname: circleci-runner"
         sudo tailscale up --authkey="$<<parameters.tailscale_authkey>>" --hostname="circleci-runner" --accept-routes
         echo "Waiting for Tailscale to connect..."
